syntax = "proto3";

package million.cluster.ss;

import "million/module/module_id.proto";

enum ServiceNameId {
    option (module.module_id) = MODULE_ID_CLUSTER;

    SERVICE_NAME_ID_INVALID = 0;
    SERVICE_NAME_ID_CLUSTER = 1;
}

message MsgBody {
    oneof body {
        HandshakeReq handshake_req = 1;
        HandshakeRes handshake_res = 2;
        ClusterSend cluster_send = 5;
        ClusterCall cluster_call = 6;
        ClusterReply cluster_reply = 7;
    }
}

message HandshakeReq {
    uint64 src_node_id = 1;
}

message HandshakeRes {
    uint64 target_node_id = 1;
}

message ClusterSend {
    uint64 src_service_id = 1;
    uint32 target_service_name_id = 2;
    uint64 session_id = 3;
}

message ClusterCall {
    uint64 src_service_id = 1;
    uint64 target_service_name_id = 2;
    uint64 session_id = 3;
}

message ClusterReply {
    uint64 src_service_id = 1;
    uint64 target_service_id = 2;
    uint64 session_id = 3;
}